--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Vcs-Git: git://daniel-baumann.ch/git/debian/packages/libcgroup.git
 
 Package: cgroup-tools
 Section: admin
-Architecture: any
+Architecture: linux-any
 Depends:
  ${misc:Depends},
  ${shlibs:Depends},
@@ -34,7 +34,7 @@ Description: control and monitor control groups (tools)
 
 Package: libcgroup1
 Section: libs
-Architecture: any
+Architecture: linux-any
 Depends:
  ${misc:Depends},
  ${shlibs:Depends},
@@ -51,7 +51,7 @@ Description: control and monitor control groups (library)
 Package: libcgroup-dbg
 Section: debug
 Priority: extra
-Architecture: any
+Architecture: linux-any
 Depends:
  ${misc:Depends},
  cgroup-tools (= ${binary:Version}),
@@ -70,7 +70,7 @@ Description: control and monitor control groups (debug)
 
 Package: libcgroup-dev
 Section: libdevel
-Architecture: any
+Architecture: linux-any
 Depends:
  ${misc:Depends},
  libcgroup1 (= ${binary:Version}),
@@ -86,7 +86,7 @@ Description: control and monitor control groups (development)
 
 Package: libpam-cgroup
 Section: admin
-Architecture: any
+Architecture: linux-any
 Depends:
  ${misc:Depends},
  ${shlibs:Depends},
